--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
-spring.application.name=SportsProject
+#spring.application.name=SportsProject
+#
+#spring.jpa.show-sql=true
+#
+#spring.datasource.url=jdbc:sqlite:database.db
+#spring.datasource.driver-class-name=org.sqlite.JDBC
+#
+#spring.main.allow-bean-definition-overriding=true
+#
+#server.port=8081
+
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+#spring.jpa.database-platform=com.cleanT.CleanT_Server.dialect.SQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:sqlite:database.db
+
+spring.security.user.name=admin
+spring.security.user.password=admin@123
+
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+
+spring.main.allow-bean-definition-overriding=true
+
+logging.level.com.cleanT.CleanT_Server.web_socket.WebSocketController=debug
+logging.level.com.cleanT.CleanT_Server.web_socket=DEBUG
+hibernate.connection.foreign_keys=true
