style & category page update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:sqlite:database.db
 
-spring.security.user.name=1
-spring.security.user.password=1
+#spring.security.user.name=1
+#spring.security.user.password=1
 
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
