--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.main.allow-bean-definition-overriding=true
 hibernate.connection.foreign_keys=true
 
 spring.messages.encoding=UTF-8
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.mvc.hiddenmethod.filter.enabled=true
