bean validation update

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.30.1</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
